refactor: use google font

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -4,6 +4,12 @@
     <title>__plasmo_static_index_title__</title>
     <meta charset="utf-8" />
     <meta name="color-scheme" content="only dark" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body></body>
 </html>
