--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>__plasmo_static_index_title__</title>
     <meta charset="utf-8" />
-    <meta name="color-scheme" content="only dark" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="author" content="aiktb <hey@aiktb.com>" />
   </head>
   <body></body>
 </html>
