--- a/src/options/index.html
+++ b/src/options/index.html
@@ -4,7 +4,7 @@
     <title>__plasmo_static_index_title__</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
-    <meta name="color-scheme" content="only light" />
+    <meta name="color-scheme" content="light dark" />
     <meta name="author" content="aiktb <hey@aiktb.com>" />
   </head>
   <body></body>
