feat: new rule menu

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="h-full">
   <head>
     <title>__plasmo_static_index_title__</title>
     <meta charset="utf-8" />
@@ -7,5 +7,7 @@
     <meta name="author" content="aiktb <hey@aiktb.com>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
-  <body></body>
+  <body
+    class="h-full bg-white font-sans text-gray-500 dark:bg-slate-900 dark:text-slate-400"
+  ></body>
 </html>
