refactor: migrate from Vue to React (#14)
* refactor: migrate from Vue to React

* refactor: update eslint to flat config

* chore: "trailingComma": "all" & "semi": true

* feat: all popup components except ColorPicker have been transplanted

* fix: unsafe external link

* refactor: tailwind @base use 'CSS in JS'

* feat: complete the popup transplantation

* feat: options page completed

* style: adjust popup transition

* chore: update ColorPicker with new color options

* refactor: wrap `Browser.tabs.sendMessage` to remove useless warnings

* fix: update rule not work

---------

Co-authored-by: aiktb <hey@aiktb.com>

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -4,7 +4,7 @@
     <title>__plasmo_static_index_title__</title>
     <meta charset="utf-8" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="author" content="aiktb <hey@aiktb.com>" />
+    <meta name="author" content="aiktb <hey@aiktb.dev>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body
