--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -4,7 +4,9 @@
     <title>__plasmo_static_index_title__</title>
     <meta charset="utf-8" />
     <meta name="color-scheme" content="light dark" />
-    <meta name="author" content="aiktb <hey@aiktb.com>" />
+    <meta name="author" content="aiktb <hey@aiktb.dev>" />
   </head>
-  <body></body>
+  <body
+    class="flex h-[19rem] w-[14rem] select-none items-center justify-center whitespace-nowrap bg-white font-mono text-sm font-bold text-slate-800 dark:bg-slate-900 dark:text-slate-200"
+  ></body>
 </html>
