--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="flex min-h-full items-center justify-center">
   <head>
     <title>__plasmo_static_index_title__</title>
     <meta charset="utf-8" />
@@ -7,6 +7,6 @@
     <meta name="author" content="aiktb <hey@aiktb.dev>" />
   </head>
   <body
-    class="flex h-[22rem] w-[14rem] select-none items-center justify-center whitespace-nowrap bg-white font-sans text-sm font-bold text-slate-800 dark:bg-slate-900 dark:text-slate-200"
+    class="flex h-[22rem] w-[14rem] select-none items-center justify-center whitespace-nowrap rounded-md bg-white font-sans text-sm font-bold text-slate-800 outline outline-2 outline-offset-2 outline-primary dark:bg-slate-900 dark:text-slate-200"
   ></body>
 </html>
