fix: `ColorPicker` of popup window occupies full screen
Former-commit-id: e66ece07537f468eba09a2e50e2634a7319e0038

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -7,6 +7,6 @@
     <meta name="author" content="aiktb <hey@aiktb.dev>" />
   </head>
   <body
-    class="flex h-[22rem] w-[14rem] select-none items-center justify-center whitespace-nowrap rounded-md bg-white font-sans text-sm font-bold text-slate-800 outline outline-2 outline-offset-2 outline-primary dark:bg-slate-900 dark:text-slate-200"
+    class="relative flex h-[22rem] w-[14rem] select-none items-center justify-center whitespace-nowrap rounded bg-white font-sans text-sm font-bold text-slate-800 outline outline-2 outline-offset-[5px] outline-primary dark:bg-slate-900 dark:text-slate-200"
   ></body>
 </html>
