chore(style): optimize titles, tooltip placement, and variable names
Former-commit-id: 7cba4e7a88fc0ddabc7bc606b358c2cbd180accb

--- a/src/options/index.html
+++ b/src/options/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="h-full">
   <head>
-    <title>__plasmo_static_index_title__</title>
+    <title>Options | __plasmo_static_index_title__</title>
     <meta charset="utf-8" />
     <meta name="color-scheme" content="light dark" />
     <meta name="author" content="aiktb <hey@aiktb.dev>" />
