--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en" class="flex min-h-full items-center justify-center">
   <head>
-    <title>__plasmo_static_index_title__</title>
+    <title>Popup | __plasmo_static_index_title__</title>
     <meta charset="utf-8" />
     <meta name="color-scheme" content="light dark" />
     <meta name="author" content="aiktb <hey@aiktb.dev>" />
