fix: height of the popup page is abnormal when the zoom ratio is high
Former-commit-id: bba0c3bec82e0cf449749286d3a1b8f008e9d3c2

--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="flex min-h-full items-center justify-center">
+<html lang="en" class="flex items-center justify-center">
   <head>
     <title>Popup | __plasmo_static_index_title__</title>
     <meta charset="utf-8" />
