--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -7,6 +7,6 @@
     <meta name="author" content="aiktb <hey@aiktb.dev>" />
   </head>
   <body
-    class="relative flex h-[26rem] w-[12.5rem] select-none items-center justify-center whitespace-nowrap rounded bg-white font-sans text-sm font-bold text-slate-800 outline outline-2 outline-offset-[5px] outline-primary dark:bg-slate-900 dark:text-slate-200"
+    class="relative flex h-[26rem] w-[12.5rem] select-none items-center justify-center whitespace-nowrap rounded bg-white font-sans text-sm font-bold text-slate-800 outline outline-2 outline-offset-[5px] outline-primary dark:bg-slate-900 dark:text-white"
   ></body>
 </html>
