chore: update project information (#269)

--- a/entrypoints/options/index.html
+++ b/entrypoints/options/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Options | Furigana Maker</title>
     <meta name="color-scheme" content="light dark" />
-    <meta name="author" content="aiktb <hey@aiktb.dev>" />
+    <meta name="author" content="aiktb <ai.ourship@gmail.com>" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <script src="./main.tsx" type="module"></script>
   </head>
