--- a/entrypoints/popup/index.html
+++ b/entrypoints/popup/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Popup | Furigana Maker</title>
     <meta name="color-scheme" content="light dark" />
-    <meta name="author" content="aiktb <hey@aiktb.dev>" />
+    <meta name="author" content="aiktb <ai.ourship@gmail.com>" />
     <script src="./main.tsx" type="module"></script>
   </head>
   <body
