fix: right click on popup icon and then click options button does not open it (#389)

--- a/apps/extension/src/entrypoints/options/index.html
+++ b/apps/extension/src/entrypoints/options/index.html
@@ -7,6 +7,7 @@
   <meta name="color-scheme" content="light dark" />
   <meta name="author" content="aiktb <ai.ourship@gmail.com>" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="manifest.open_in_tab" content="true" />
   <script src="./main.tsx" type="module"></script>
 </head>
 
