feat: add suggested follow-up actions for warning banner when Auto Mode detects a large site (#379)
* refactor: use wxt `createShadowRootUi` to replace raw DOM manipulation

* refactor: remove magic numbers and non-null assertions

* fix: unable to copy yomikata in kanji filter editor (#377)

* feat: enhanced validation and error handling for domain and selector inputs (#376)

* chore: update wxt version to 0.20.8

* chore: adjust button order

* refactor: extract component and simplify component logic

* refactor: extract components

* feat: adjust button size

* feat: form uniqueness validation logic error

* feat: remove redundant prompt information

* fix: uniqueness check error in update mode

* refactor: simplify validation logic

* chore: remove useless CSS

* feat: allows editing of the domain field of an existing rule

* fix: domain field containing wildcard characters should not be rendered as a link

* feat: optimize copywriting

* feat: strengthen the validation rules for imported files and simplify the import process

* chore: remove useless dep

* chore: fix i18n key

* chore: adjust button order

* chore(main): release 3.1.0 (#374)

* chore(main): release 3.1.0

* chore: update changelog

* ci: remove commitlint (#381)

* ci: submit to CWS results in an error message: Cannot find zip file

* chore: add i18n

* feat: implement PageTooLargeWarningDialog component and update rendering logic

* chore: replace useless CSS

* feat: add a link on how to turn off the warning

* fix: right click on popup icon and then click options button does not open it (#389)

* feat: allows disabling warnings and always running the extension on large sites

* feat: allows editing of the always run list on the options page

* feat: remove the function of dialog timer closing

* feat: support dark mode

* refactor: unified color scheme

* feat: add i18n

* feat: add i18n

* fix: unexpected line breaks

--- a/apps/extension/src/entrypoints/options/index.html
+++ b/apps/extension/src/entrypoints/options/index.html
@@ -11,7 +11,7 @@
   <script src="./main.tsx" type="module"></script>
 </head>
 
-<body class="h-full bg-white text-gray-500 dark:bg-slate-900 dark:text-slate-400">
+<body class="h-full bg-white text-slate-500 dark:bg-slate-900 dark:text-slate-400">
   <!--
   The class here cannot be merged into the body.
   There is a strange "injected stylesheet" in the Chrome extension HTML that sets the font-family and font-size,
